[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Door.png" type="Texture" id=1]
[ext_resource path="res://Objects/Door/Door.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/Victory.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/Victory2.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 4 )

[node name="Door" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
